--- a/src/app/pages/customers/customers.html
+++ b/src/app/pages/customers/customers.html
@@ -1,6 +1,6 @@
 <app-header title="Customers">
   <div actions>
-    <button size="small" pButton type="button" label="Add Customer" icon="fa fa-plus"></button>
+    <button size="small" pButton type="button" label="Add Customer" icon="fa fa-plus" routerLink="/customers/add"></button>
   </div>
 </app-header>
 
