--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <!-- Sidebar -->
     <app-sidebar></app-sidebar>
     <!-- Main area -->
-    <div class="flex-1 flex flex-col min-w-0">
+    <div class="flex-1 flex flex-col min-w-0 h-screen overflow-auto">
         <!-- Content -->
         <main>
             <router-outlet/>
