--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <!-- Main area -->
     <div class="flex-1 flex flex-col min-w-0 h-screen overflow-auto">
         <!-- Content -->
-        <main>
+        <main class="h-full">
             <router-outlet/>
         </main>
     </div>
