--- a/src/app/pages/buyers/buyers.html
+++ b/src/app/pages/buyers/buyers.html
@@ -1,42 +1,55 @@
 <app-header title="Buyers">
-  <div actions class="flex gap-2 items-end">
-    <div class="flex flex-col">
-      <label class="text-xs mb-1">Auction</label>
-      <p-select [loading]="loadingAuctions" placeholder="Select Auction" appendTo="body" [options]="auctions" optionLabel="NameOfAuction" optionValue="id"
-                [(ngModel)]="selectedAuctionId" (onChange)="load()" [filter]="true" [showClear]="true"
-                (onFilter)="onFilter($event)"></p-select>
+    <div actions class="flex gap-2 items-end">
+        <div class="flex flex-col">
+            <label class="text-xs mb-1">Auction</label>
+            <p-select [loading]="loadingAuctions" placeholder="Select Auction" appendTo="body" [options]="auctions"
+                      optionLabel="NameOfAuction" optionValue="id"
+                      [(ngModel)]="selectedAuctionId" (onChange)="load()" [filter]="true" [showClear]="true"
+                      (onFilter)="onFilter($event)"></p-select>
+        </div>
+        <div class="flex flex-col">
+            <label class="text-xs mb-1">Name</label>
+            <input pInputText type="text" [(ngModel)]="searchName" (keyup.enter)="load()" placeholder="Search"/>
+        </div>
     </div>
-    <div class="flex flex-col">
-      <label class="text-xs mb-1">Name</label>
-        <input pInputText type="text" [(ngModel)]="searchName" (keyup.enter)="load()" placeholder="Search"/>
-    </div>
-  </div>
 </app-header>
 
 <p-table [value]="rows" [loading]="loading" [paginator]="rows.length > 0" [rows]="rowsPerPage">
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Name</th>
-      <th style="width: 10rem">Status</th>
-      <th style="width: 10rem">Bid No</th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-row>
-    <tr>
-      <td>{{ row.firstName }} {{row.lastName}}</td>
-      <td>
-          @if (row.buyer_info_status?.toLowerCase() == 'active') {
-              <span class="text-green-700">{{ row.buyer_info_status }}</span>
-          } @else {
-              <span class="text-orange-600">{{ row.buyer_info_status }}</span>
-          }
-      </td>
-      <td>{{ row.bidno }}</td>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="emptymessage">
-    <tr>
-      <td colspan="3">No buyers found</td>
-    </tr>
-  </ng-template>
+    <ng-template pTemplate="header">
+        <tr>
+            <th>Name</th>
+            <th style="width: 10rem">Bid No</th>
+            <th style="width: 10rem">Value Allocated</th>
+            <th style="width: 10rem">Status</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-row>
+        <tr>
+            <td>
+                @if (!row.firstName && !row.lastName) {
+                    <div class="flex items-center gap-3">
+                        <span class="text-red-600">{{ row.buyer_id }}</span>
+                        <i class="fa fa-info cursor-pointer text-xs rounded-full bg-blue-500
+                  text-white p-1 text-center w-4 h-4" pTooltip="User Not registered on Wildlife."></i>
+                    </div>
+                } @else {
+                    {{ row.firstName }} {{ row.lastName }}
+                }
+            </td>
+            <td>{{ row.bidno }}</td>
+            <td>{{ row.value_allowed | currency: 'INR': 'R' }}</td>
+            <td>
+                @if (row.buyer_info_status?.toLowerCase() == 'active') {
+                    <span class="text-green-700">{{ row.buyer_info_status }}</span>
+                } @else {
+                    <span class="text-orange-600">{{ row.buyer_info_status }}</span>
+                }
+            </td>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <tr>
+            <td colspan="4">No buyers found</td>
+        </tr>
+    </ng-template>
 </p-table>
