--- a/src/app/pages/lots/lots.html
+++ b/src/app/pages/lots/lots.html
@@ -1,72 +1,75 @@
-<app-header title="Lots">
-    <div actions class="flex gap-2 items-end">
-        <div class="flex flex-col">
-            <label class="text-xs mb-1">Auction</label>
-            <p-select [loading]="loadingAuctions" placeholder="Select Auction" appendTo="body" [options]="auctions"
-                      optionLabel="NameOfAuction" optionValue="id"
-                      [(ngModel)]="selectedAuctionId" (onChange)="load()" [filter]="true" [showClear]="true"
-                      (onFilter)="onFilter($event)"></p-select>
+@if (!showInvoiceView) {
+    <app-header title="Lots">
+        <div actions class="flex gap-2 items-end">
+            <div class="flex flex-col">
+                <label class="text-xs mb-1">Auction</label>
+                <p-select [loading]="loadingAuctions" placeholder="Select Auction" appendTo="body" [options]="auctions"
+                          optionLabel="NameOfAuction" optionValue="id"
+                          [(ngModel)]="selectedAuctionId" (onChange)="load()" [filter]="true" [showClear]="true"
+                          (onFilter)="onFilter($event)"></p-select>
+            </div>
+            <div class="flex flex-col">
+                <label class="text-xs mb-1">Lot No</label>
+                <input pInputText type="text" [(ngModel)]="searchLot" (keyup.enter)="load()" placeholder="Lot number"/>
+            </div>
         </div>
-        <div class="flex flex-col">
-            <label class="text-xs mb-1">Lot No</label>
-            <input pInputText type="text" [(ngModel)]="searchLot" (keyup.enter)="load()" placeholder="Lot number"/>
+    </app-header>
+
+    <p-table [value]="rows" [loading]="loading" [paginator]="rows.length > 0" [rows]="rowsPerPage">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Lot no</th>
+                <th>Wildlife Type</th>
+                <th>Description</th>
+                <th style="width: 8rem">Lot Type</th>
+                <th style="width: 5rem">Quantity</th>
+                <th style="width: 8rem">Sold Status</th>
+                <th style="width: 12rem">Buyer</th>
+                <th style="width: 8rem">Actions</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-row>
+            <tr>
+                <td>{{ row.mainlotno }}</td>
+                <td>{{ row.wildlifeType }}</td>
+                <td>{{ row.description }}</td>
+                <td>Per {{ row.price | titlecase }}</td>
+                <td>{{ row.sum_total }}</td>
+                <td>
+                    @if (row.VMStatus?.toLowerCase() == 'sold') {
+                        <span class="text-green-700">{{ row.VMStatus }}</span>
+                    } @else if (row.VMStatus?.toLowerCase() == 's.t.c') {
+                        <span class="text-yellow-600">{{ row.VMStatus }}</span>
+                    }
+                    @else {
+                        <span class="text-red-600">{{ row.VMStatus }}</span>
+                    }
+                </td>
+                <td>
+                    {{row.firstName}} {{row.lastName}}
+                </td>
+                <td>
+                    <p-button icon="fa fa-file-invoice-dollar" pTooltip="Create Invoice" tooltipPosition="left" size="small" (onClick)="showInvoice(row)"></p-button>
+                </td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="8">No lots found</td>
+            </tr>
+        </ng-template>
+    </p-table>
+} @else {
+    <div class="flex justify-between items-center p-4 border-b sticky top-0 bg-white z-10 no-print">
+        <h2 class="text-xl font-semibold">Invoice Preview</h2>
+        <div class="flex gap-2">
+            <p-button icon="fa fa-print" (onClick)="printInvoice()" size="small" label="Print"></p-button>
+            <p-button icon="fa fa-times" (onClick)="hideInvoice()" size="small" [text]="true" label="Close"></p-button>
         </div>
     </div>
-</app-header>
-
-<p-table [value]="rows" [loading]="loading" [paginator]="rows.length > 0" [rows]="rowsPerPage">
-    <ng-template pTemplate="header">
-        <tr>
-            <th>Lot no</th>
-            <th>Wildlife Type</th>
-            <th>Description</th>
-            <th style="width: 8rem">Lot Type</th>
-            <th style="width: 5rem">Quantity</th>
-            <th style="width: 8rem">Sold Status</th>
-            <th style="width: 12rem">Buyer</th>
-            <th style="width: 8rem">Actions</th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-row>
-        <tr>
-            <td>{{ row.mainlotno }}</td>
-            <td>{{ row.wildlifeType }}</td>
-            <td>{{ row.description }}</td>
-            <td>Per {{ row.price | titlecase }}</td>
-            <td>{{ row.sum_total }}</td>
-            <td>
-                @if (row.VMStatus?.toLowerCase() == 'sold') {
-                    <span class="text-green-700">{{ row.VMStatus }}</span>
-                } @else if (row.VMStatus?.toLowerCase() == 's.t.c') {
-                    <span class="text-yellow-600">{{ row.VMStatus }}</span>
-                }
-                @else {
-                    <span class="text-red-600">{{ row.VMStatus }}</span>
-                }
-            </td>
-            <td>
-                {{row.firstName}} {{row.lastName}}
-            </td>
-            <td>
-                <p-button icon="fa fa-file-invoice-dollar" pTooltip="Create Invoice" tooltipPosition="left" size="small" (onClick)="showInvoice(row)"></p-button>
-            </td>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="emptymessage">
-        <tr>
-            <td colspan="8">No lots found</td>
-        </tr>
-    </ng-template>
-</p-table>
-
-<p-drawer [(visible)]="showInvoiceModal" position="left" [style]="{width: '90vw'}">
-    <ng-template pTemplate="header">
-        <div class="flex justify-between items-center w-full">
-            <span class="font-semibold text-lg">Invoice Preview</span>
-            <p-button icon="fa fa-print" (onClick)="printInvoice()" size="small" [text]="true"></p-button>
-        </div>
-    </ng-template>
-    <div id="invoiceContent" class="overflow-auto h-full">
+    <div id="invoiceContent">
         <app-sample-invoice [config]="invoiceConfig" [lots]="invoiceLotDetails"></app-sample-invoice>
     </div>
-</p-drawer>
+}
+
+
