--- a/src/app/pages/sample-invoice/sample-invoice.html
+++ b/src/app/pages/sample-invoice/sample-invoice.html
@@ -57,7 +57,7 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th class="text-left">Lot</th>
+                    <th class="text-left w-lot-column">Lot</th>
                     <th class="text-left">Buyer</th>
                     <th class="text-left">Item</th>
                     <th class="text-right">M</th>
