--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@
 
 @media print {
   @page {
-    margin: 0;
+    margin: 5mm;
     size: A4;
   }
   
@@ -42,21 +42,35 @@
   #inner-container {
     box-shadow: unset !important;
   }
+
+  #main-container {
+    padding: 0px !important;
+  }
   
   #invoiceContent {
     position: absolute !important;
     left: 0 !important;
     top: 0 !important;
-    width: 100vw !important;
+    width: 100% !important;
     height: auto !important;
     max-height: none !important;
     overflow: visible !important;
     transform: none !important;
     margin: 0 !important;
-    padding: 10mm !important;
+    background: white !important;
+  }
+  
+  body {
+    background: white !important;
   }
   
   .no-print {
     display: none !important;
+  }
+
+  .w-lot-column {
+    width: 20px !important;
+    min-width: 20px !important;
+    max-width: 20px !important;
   }
 }
